SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/Quicksight_Request__c.object
<CustomObject>
    <fields>
        <fullName>ADO_Notes__c</fullName>
        <label>ADO Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Account__c</fullName>
        <label>AWS Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Region__c</fullName>
        <description>US East (N. Virginia)
US West (Oregon)</description>
        <label>AWS Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Component__c</fullName>
        <label>Application Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSP_Option_Year__c</fullName>
        <label>CSP Option Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Cost__c</fullName>
        <label>Estimated Monthly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Users__c</fullName>
        <label># of Users</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_Requested__c</fullName>
        <label>Number of Months Requested</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ocean_Request_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ocean Request Id</label>
        <referenceTo>Ocean_Request__c</referenceTo>
        <relationshipLabel>Quicksight Requests</relationshipLabel>
        <relationshipName>Quicksight_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickSight_Request_Id__c</fullName>
        <displayFormat>QS-{00000}</displayFormat>
        <label>QuickSight Request Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Model__c</fullName>
        <description>Annual
Monthly</description>
        <label>Subscription Model</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Cost__c</fullName>
        <label>Total Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <description>Author
Reader</description>
        <label>User Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <label>Wave</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Sessions_per_UserMonth__c</fullName>
        <label># of Sessions per User/Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quicksight Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Resource_Status__c</columns>
        <columns>Project__c</columns>
        <columns>Application__c</columns>
        <columns>Wave__c</columns>
        <columns>CSP_Option_Year__c</columns>
        <columns>Environment__c</columns>
        <columns>AWS_Account__c</columns>
        <columns>AWS_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Quicksight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quicksight Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>